[project]
name = "parastack"
authors = [{name = "Vladimir Lebedev", email = "zeronineseven@gmail.com"}]
dynamic = ["version", "description"]
license = {text = "MPL-2.0"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest ~=7.2.1",
    "pytest-asyncio ~=0.20.3",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
